# hermes-kchat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/hermes_kchat/: __init__.py  adapter.py  plugin.yaml  pusher.py
tests/: conftest.py  test_adapter.py  test_pusher.py  test_standalone_send.py
